# FinanceTracker

./: .env  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env.template  main.py
app/actions/: create_superuser.py
app/alembic/: env.py
app/alembic/versions/: 2024_12_28_1235-003c1d01f658_create_users_table.py  2024_12_28_1301-0ae73e2d21e6_create_access_tokens_table.py  2024_12_29_0045-a02e7ef02f16_create_transactions_and_categories_.py  2024_12_31_2041-ee3d4c87e224_add_usercategory_and_aupdate_.py  2024_12_31_2245-b77e81116879_add_usercategory.py
app/api/: __init__.py
app/api/dependecies/: access_tokens.py  strategy.py  users.py
app/api/dependecies/auth/: __init__.py  access_tokens.py  backend.py  strategy.py  user_manager.py  users.py
app/api/v1/: __init__.py  auth.py  categories.py  fastapi_users.py  reports.py  transactions.py  user_categories.py  users.py
app/core/: config.py  db_helper.py
app/core/authentications/: user_manager.py
app/core/initializers/: __init__.py  initialize_default_categories.py
app/core/models/: __init__.py  access_token.py  base.py  category.py  db_helper.py  transaction.py  user.py  user_category.py
app/core/models/mixins/: id_int_pk_mixin.py
app/core/schemas/: base_user_category.py  category.py  report.py  transaction.py  user.py
app/core/services/: category_service.py  report_service.py  transaction_service.py
app/db/: init_db.py  session.py
app/models/: category.py  transaction.py  user.py
