[tool.poetry]
name = "financetracker"
version = "0.1.0"
description = ""
authors = ["VrenTati <kateryna.vynokurova.pz.2022@lpnu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
