[tool.poetry]
name = "financetracker"
version = "0.1.0"
description = ""
authors = ["VrenTati <vrentati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
asyncpg = "^0.30.0"
matplotlib = "^3.10.0"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
